# biovector-eval

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  mean-field-transformers-roadmap.md  pyproject.toml
.claude/commands/: visualize.md
data/review/: biomapper2_vs_kraken_report.md  demographics_biomapper2_mapping.json  demographics_biomapper2_mapping.tsv  demographics_kraken_mapping.json  demographics_kraken_mapping.tsv  generation_log.json  generation_log_hpo.json  q2hpo_expertintheloop.tsv  q2hpo_partial_results.tsv  q2hpo_q2loinc_comparison_report.md  q2hpo_review_100.json  q2hpo_vs_q2loinc_comparison.tsv  q2loinc_review_100.json  q2q_cluster_summary.md  q2q_clusters_all.json  q2q_clusters_all.tsv  q2q_clusters_filtered.json  q2q_clusters_filtered.tsv  q2q_expertintheloop.tsv  q2q_generation_log.json  q2q_mutual_pairs_all.tsv  q2q_review_100.json  q2q_review_summary.md  sample_questions.json
data_full_synonyms/: hmdb  indices
docs/: Vector DB Analysis Plan.md  database-field-comparison.md  decisions.md  dev_guidelines.md  embedding_strategy_plan.md  progress.md
notebooks/: analysis.ipynb  hmdb_synonym_analysis.ipynb  similarity_multi-vector_hnsw.ipynb  similarity_multi-vector_ivf.ipynb  similarity_single-pooled_hnsw.ipynb  similarity_single-pooled_ivf.ipynb  similarity_single-primary_hnsw.ipynb  similarity_single-primary_ivf.ipynb  string_vs_semantic_similarity.ipynb
notebooks/demographics/: Demographic_Fields_Extracted.xlsx  demographics_to_biomapper2.ipynb  demographics_to_kraken.ipynb
notebooks/mean_field/: 01_particle_dynamics.ipynb  04_kuramoto.ipynb  utils.py
notebooks/metabolites/: similarity_analysis_conclusions.md  similarity_intra_inter_entity.ipynb  similarity_multi-vector_ivf.ipynb  similarity_single-pooled_hnsw.ipynb  similarity_single-pooled_ivf.ipynb
notebooks/metabolites/mean_field/: 00_foundations.ipynb  02_clustering_theorem.ipynb  03_metastability.ipynb  05_normalization.ipynb  06_long_context.ipynb  07_vector_db_implications.ipynb
notebooks/metabolon/: metabolon_biomapper_tutorial.ipynb  metabolon_to_biomapper.ipynb
notebooks/questionnaires/: q2q_3dataset_clustering.ipynb  q2q_4dataset_clustering.ipynb
scripts/: add_arivale_to_ground_truth.py  build_full_synonym_indices.py  build_indices.py  check.sh  consolidate_demographics.py  consolidate_questionnaires.py  fix.sh  generate_all_embeddings.py  generate_embeddings.py  generate_loinc_embeddings.py  generate_loinc_report.py  generate_mondo_embeddings.py  generate_q2hpo_review.py  generate_q2loinc_review.py  generate_q2q_expertintheloop.py  generate_q2q_review.py  load_questionnaire_csv.py  merge_evaluation_results.py  parse_hmdb_xml.py  run_all_embeddings.sh  run_evaluation.py
src/biovector_eval/: __init__.py  cli.py
src/biovector_eval/base/: __init__.py  domain.py  entity.py  evaluator.py  ground_truth.py  loaders.py
src/biovector_eval/core/: __init__.py  embedding_strategy.py  metrics.py  performance.py  quantization.py
src/biovector_eval/domains/: __init__.py
src/biovector_eval/domains/demographics/: __init__.py  consolidate.py  domain.py
src/biovector_eval/domains/demographics/parsers/: __init__.py  source_mappings.py
src/biovector_eval/domains/metabolites/: __init__.py  domain.py  ground_truth.py  models.py
src/biovector_eval/domains/questionnaires/: __init__.py  consolidate.py  domain.py  models.py
src/biovector_eval/domains/questionnaires/harmonization/: __init__.py  cache.py  candidate_pair.py  genoma_adapter.py  mondo_adapter.py  ontology_adapter.py
src/biovector_eval/domains/questionnaires/loinc/: __init__.py  domain.py  parser.py
src/biovector_eval/domains/questionnaires/parsers/: __init__.py  generic.py  source_mappings.py
src/biovector_eval/metabolites/: __init__.py  evaluator.py  ground_truth.py
src/biovector_eval/utils/: __init__.py  device.py  persistence.py
tests/integration/: __init__.py  test_evaluation_pipeline.py
tests/integration/questionnaires/: __init__.py  test_genoma_live.py
tests/unit/: test_build_indices.py  test_embedding_strategy.py  test_generate_embeddings.py  test_ground_truth.py  test_multi_vector_search.py  test_persistence.py
tests/unit/questionnaires/: test_genoma_adapter.py
